# docs/swagger.json
@@ -11,6 +11,29 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/health": {
+            "get": {
+                "description": "Get the health status of the API",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "System"
+                ],
+                "summary": "Show the status of server",
+                "responses": {
+                    "200": {
+                        "description": "Server is up and running",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/tasks": {
             "post": {
                 "description": "Adds a new asynchronous scraping task to the queue based on city and max price.",
@@ -31,7 +54,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.TaskRequest"
+                            "$ref": "#/definitions/github_com_Wizzerin_immogucker-go_internal_models.TaskRequest"
                         }
                     }
                 ],
@@ -108,7 +131,7 @@
         }
     },
     "definitions": {
-        "models.TaskRequest": {
+        "github_com_Wizzerin_immogucker-go_internal_models.TaskRequest": {
             "type": "object",
             "required": [
                 "city",
